--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
+    "@photo-sphere-viewer/core": "^5.11.1",
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-photo-sphere-viewer": "^6.0.0",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
