--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
     "@photo-sphere-viewer/core": "^5.11.1",
-    "@react-google-maps/api": "^2.20.3",
     "axios": "^1.7.7",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-photo-sphere-viewer": "^6.0.0",
     "react-router-dom": "^6.27.0",
     "react-slick": "^0.30.2",
