--- a/package.json
+++ b/package.json
@@ -39,5 +39,11 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "vite": "^5.4.10"
+  },
+  "proxy": {
+    "/api": {
+      "target": "https://umkm-catalogue-backend.vercel.app/",
+      "changeOrigin": true
+    }
   }
 }
