--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "umkm-catalogue-frontend",
   "private": true,
+  "proxy": "https://umkm-catalogue-backend.vercel.app/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -39,11 +40,5 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "vite": "^5.4.10"
-  },
-  "proxy": {
-    "/api": {
-      "target": "https://umkm-catalogue-backend.vercel.app/",
-      "changeOrigin": true
-    }
   }
 }
